--- a/app/build.gradle
+++ b/app/build.gradle
@@ -238,7 +238,7 @@ dependencies {
 
     implementation 'com.github.KeepSafe:TapTargetView:1.13.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+//    kapt 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.github.Vove7:recycler-fast-scroll:0.3.3'
 
     implementation 'com.github.Vove7.MarkdownView:library:0.20.1'
