--- a/jadb/src/main/cpp/CMakeLists.txt
+++ b/jadb/src/main/cpp/CMakeLists.txt
@@ -33,5 +33,5 @@ target_link_libraries(jadb ${log-lib} boringssl::crypto_static cxx::cxx)
 
 if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
     add_custom_command(TARGET jadb POST_BUILD
-            COMMAND ${CMAKE_STRIP} --remove-section=.comment "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libadb.so")
+            COMMAND ${CMAKE_STRIP} --remove-section=.comment "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libjadb.so")
 endif ()
