--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.greenrobot.greendao'
-apply plugin: 'AndResGuard'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'io.michaelrocks.paranoid'
 
@@ -24,7 +23,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         def subVersion = 0
-        versionName "2.2.0"
+        versionName "2.3.0"
         def vc = Integer.parseInt(versionName.replace(".", "")) * 10
         if (vc < 10000) {
             vc *= 10
@@ -54,7 +53,7 @@ android {
     }
 
     buildFeatures {
-        viewBinding = true
+        viewBinding true
     }
 
     buildTypes {
@@ -160,44 +159,6 @@ task makeJar(type: Jar) {
     //exclude{ it.name.startsWith('R$');}
 }
 
-// 资源混淆
-andResGuard {
-    // mappingFile = file("./resource_mapping.txt")
-    mappingFile = null
-    use7zip = true
-    useSign = true
-    // 打开这个开关，会keep住所有资源的原始路径，只混淆资源的名字
-    keepRoot = false
-    // 设置这个值，会把arsc name列混淆成相同的名字，减少string常量池的大小
-    fixedResName = "arg"
-    // 打开这个开关会合并所有哈希值相同的资源，但请不要过度依赖这个功能去除去冗余资源
-    mergeDuplicatedRes = true
-    whiteList = [
-    ]
-    compressFilePattern = [
-            "*.png",
-            "*.jpg",
-            "*.jpeg",
-            "*.gif",
-    ]
-    sevenzip {
-        artifact = 'com.tencent.mm:SevenZip:1.2.21'
-        //path = "/usr/local/bin/7za"
-    }
-
-    /**
-     * 可选： 如果不设置则会默认覆盖assemble输出的apk
-     **/
-    def date = new Date().format("[MM-dd]")
-    println(date)
-    finalApkBackupPath = "${project.rootDir}/apks/v-assist-${date}.apk"
-
-    /**
-     * 可选: 指定v1签名时生成jar文件的摘要算法
-     * 默认值为“SHA-1”
-     **/
-    // digestalg = "SHA-256"
-}
 dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -247,7 +208,7 @@ dependencies {
     implementation project(path: ':speechLib')
 
     implementation "com.github.infotech-group:android-drawable-dsl:0.3.0"
-    def work_version = "2.4.0"
+    def work_version = "2.5.0"
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
     implementation 'com.google.android:flexbox:2.0.1'
@@ -255,9 +216,4 @@ dependencies {
     implementation 'com.github.jenly1314:ZXingLite:2.1.0'
 
     compileOnly 'com.microsoft.design:fluent-system-icons:1.1.25'
-}
-repositories {
-    flatDir {
-        dirs 'libs'
-    }
 }
