--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     repositories {
         mavenCentral()
         google()
-        jcenter()
+        maven { url'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.2'
@@ -24,6 +24,7 @@ allprojects {
     repositories {
         mavenCentral()
         google()
+        maven { url'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
         maven { url 'https://jitpack.io' }
         maven { url "https://dl.bintray.com/drummer-aidan/maven/" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
