--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,5 @@ org.gradle.jvmargs=-Xmx1024m
 # org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
+systemProp.org.gradle.internal.http.socketTimeout=3000
+systemProp.org.gradle.internal.http.connectionTimeout=3000
