--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         def subVersion = 0
-        versionName "2.3.3"
+        versionName "2.3.4"
         def vc = Integer.parseInt(versionName.replace(".", "")) * 10
         if (vc < 10000) {
             vc *= 10
@@ -178,6 +178,7 @@ dependencies {
     implementation project(':executorengine')
     implementation project(path: ':common')
     implementation project(path: ':jadb')
+    implementation project(path: ':tts')
     implementation project(path: ':androlua')
     implementation project(path: ':rhino-android')
     implementation project(path: ':dui-speech-lib')
@@ -196,7 +197,9 @@ dependencies {
 
     implementation 'com.github.Vove7:SlidePickerView:1.0.2'
 
-    implementation 'com.github.SJJ-dot:Cockroach:2.0.1'
+    implementation('com.github.SJJ-dot:Cockroach:2.0.1') {
+        exclude group: 'me.weishu', module: 'free_reflection'
+    }
 
     implementation 'com.github.KeepSafe:TapTargetView:1.13.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -220,4 +223,5 @@ dependencies {
 
     implementation 'com.github.tiann:epic:0.11.2@aar'
     implementation 'me.weishu.exposed:exposed-xposedapi:0.4.5'
+    implementation 'com.github.tiann:FreeReflection:3.1.0'
 }
