--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -19,6 +19,10 @@
             android:name=".debug.ScrcpyTestActivity"
             android:exported="true" />
 
+        <activity
+            android:name=".debug.StopAppTestActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
